[package]
name = "hello-world"
version = "0.1.0"
authors = ["cuerpobookssd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1"
serde = "1.0.110"
serde_json = "1.0.53"
env_logger = "0.7.1"
# paperclip = { git = "https://github.com/wafflespeanut/paperclip", features = ["actix"] }
